# expense-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.py  debug_nlu.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 8cff5091c492_create_initial_tables.py
seed/: references.py
src/: config.py  main.py
src/bot/: formatters.py  helpers.py  keyboards.py  middlewares.py  router.py  states.py
src/bot/handlers/: add.py  commands.py  start.py
src/core/: enums.py  schemas.py
src/db/: engine.py  models.py  repo.py
src/services/: export.py  nlu.py  scheduler.py  stats.py  transaction.py
tests/: conftest.py  test_export.py  test_nlu.py  test_stats.py  test_transaction.py
